[gd_scene load_steps=29 format=3 uid="uid://b57uspbprxc8"]

[ext_resource type="Script" uid="uid://bd81ysdlqd6oy" path="res://scripts/world.gd" id="1_ho7yh"]
[ext_resource type="Script" uid="uid://chl816vkrpda8" path="res://scripts/ui/fps_counter.gd" id="4_2328u"]
[ext_resource type="Shader" uid="uid://b6ayymrhkylhq" path="res://scripts/shaders/blur.gdshader" id="4_p7mxg"]
[ext_resource type="AudioStream" uid="uid://bsu17fnqpfelw" path="res://audio/661248__magmadiverrr__video-game-menu-music.ogg" id="4_taatn"]
[ext_resource type="Script" uid="uid://dcoocqnfhag40" path="res://scripts/ui/menu/options/fullscreen.gd" id="5_abwkb"]
[ext_resource type="Script" uid="uid://b8g8fngpp1cld" path="res://scripts/ui/menu/options/mouse_sensitivity.gd" id="6_00vww"]
[ext_resource type="Script" uid="uid://co76seoupgayb" path="res://scripts/ui/menu/options/back.gd" id="6_2hany"]
[ext_resource type="Script" uid="uid://du5qtfmm8p5du" path="res://scripts/ui/menu/pause/resume.gd" id="7_5cdyw"]
[ext_resource type="Script" uid="uid://bmy1ha2maxmwg" path="res://scripts/ui/menu/options/controller_sensitivity.gd" id="7_jhf7u"]
[ext_resource type="Script" uid="uid://m6e4rjrt4jo8" path="res://scripts/orb_spawner.gd" id="7_orbspawner"]
[ext_resource type="Script" uid="uid://bros2yyotk2f5" path="res://scripts/ability_spawner.gd" id="8_abilityspawner"]
[ext_resource type="Script" uid="uid://o3k14mw74n81" path="res://scripts/ui/menu/pause/quit.gd" id="9_ucmny"]
[ext_resource type="Script" uid="uid://ck3www2t3jhu2" path="res://scripts/ui/game_hud.gd" id="15_gamehud"]
[ext_resource type="Script" uid="uid://c2gs8p3ocbho6" path="res://scripts/music_playlist.gd" id="16_musicplaylist"]
[ext_resource type="Script" uid="uid://dg1npfn0we0ge" path="res://scripts/ui/music_notification.gd" id="17_musicnotification"]
[ext_resource type="PackedScene" path="res://rl_main_menu.tscn" id="19_rlmenu"]
[ext_resource type="FontFile" uid="uid://drnhkeso62jgq" path="res://fonts/Rajdhani-Bold.ttf" id="20_fontbold"]
[ext_resource type="FontFile" uid="uid://dyk783ccd5kes" path="res://fonts/Rajdhani-SemiBold.ttf" id="21_fontsemibold"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_r06yd"]
energy_multiplier = 1.25

[sub_resource type="Sky" id="Sky_78err"]
sky_material = SubResource("PhysicalSkyMaterial_r06yd")

[sub_resource type="Environment" id="Environment_v7lsv"]
background_mode = 2
sky = SubResource("Sky_78err")
ambient_light_source = 2
ambient_light_color = Color(0.75, 0.72, 0.68, 1)
ambient_light_energy = 0.5
reflected_light_source = 2
tonemap_mode = 2
tonemap_white = 6.0
glow_enabled = true
glow_intensity = 0.12
glow_strength = 0.25
glow_bloom = 0.03
glow_blend_mode = 0
glow_hdr_threshold = 2.0
glow_hdr_scale = 0.35
glow_hdr_luminance_cap = 10.0
adjustment_enabled = true
adjustment_contrast = 1.15
adjustment_saturation = 1.02

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_wntx8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_music_notification"]
bg_color = Color(0, 0, 0, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nou27"]
shader = ExtResource("4_p7mxg")
shader_parameter/blur_amount = 2.0
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_options_panel"]
bg_color = Color(0, 0, 0, 0.85)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.3, 0.7, 1, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_normal"]
bg_color = Color(0.15, 0.15, 0.2, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.7, 1, 0.4)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.3, 0.5, 0.7, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.8, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.2, 0.3, 0.4, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.7, 1, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="World" type="Node"]
script = ExtResource("1_ho7yh")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v7lsv")
camera_attributes = SubResource("CameraAttributesPractical_wntx8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.835807, -0.47011, 0.283589, -0.375944, 0.866496, 0.328406, -0.400115, 0.167871, -0.900959, 0, 4.88489, 0)
light_color = Color(0.95, 0.9, 0.82, 1)
light_energy = 0.85
light_indirect_energy = 0.5
shadow_enabled = true
shadow_bias = 0.04
directional_shadow_mode = 1

[node name="FpsCounter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("4_2328u")

[node name="GameHUD" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="GameHUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("15_gamehud")

[node name="MarginContainer" type="MarginContainer" parent="GameHUD/HUD"]
layout_mode = 1
offset_left = 24.0
offset_top = 20.0
offset_right = 420.0
offset_bottom = 220.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GameHUD/HUD/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TimerLabel" type="Label" parent="GameHUD/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("20_fontbold")
theme_override_font_sizes/font_size = 32
text = "5:00"

[node name="ScoreLabel" type="Label" parent="GameHUD/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("21_fontsemibold")
theme_override_font_sizes/font_size = 22
text = "KILLS  0"

[node name="LevelLabel" type="Label" parent="GameHUD/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("21_fontsemibold")
theme_override_font_sizes/font_size = 22
text = "LVL  0/3"

[node name="AbilityLabel" type="Label" parent="GameHUD/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("21_fontsemibold")
theme_override_font_sizes/font_size = 18
text = "NONE"

[node name="HealthLabel" type="Label" parent="GameHUD/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.4)
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("21_fontsemibold")
theme_override_font_sizes/font_size = 22
text = "HP  3"

[node name="OrbSpawner" type="Node3D" parent="."]
script = ExtResource("7_orbspawner")

[node name="AbilitySpawner" type="Node3D" parent="."]
script = ExtResource("8_abilityspawner")

[node name="GameplayMusic" type="Node" parent="."]
script = ExtResource("16_musicplaylist")

[node name="MusicNotification" type="CanvasLayer" parent="."]

[node name="NotificationUI" type="Control" parent="MusicNotification"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("17_musicnotification")

[node name="Panel" type="PanelContainer" parent="MusicNotification/NotificationUI"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -75.0
offset_right = -20.0
offset_bottom = 75.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_music_notification")

[node name="MarginContainer" type="MarginContainer" parent="MusicNotification/NotificationUI/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 8

[node name="VBoxOuter" type="VBoxContainer" parent="MusicNotification/NotificationUI/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="NowPlaying" type="Label" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 10
text = "NOW PLAYING"
horizontal_alignment = 1

[node name="HBox" type="HBoxContainer" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AlbumArt" type="TextureRect" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter/HBox"]
texture_filter = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter/HBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 14
text = "Song Title"
text_overrun_behavior = 3

[node name="Artist" type="Label" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter/HBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_font_sizes/font_size = 12
text = "Artist Name"
text_overrun_behavior = 3

[node name="TrackInfo" type="Label" parent="MusicNotification/NotificationUI/Panel/MarginContainer/VBoxOuter/HBox/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 10
text = "Track 1/10"

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Menu"]
unique_name_in_owner = true
stream = ExtResource("4_taatn")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="Blur" type="ColorRect" parent="Menu"]
visible = false
material = SubResource("ShaderMaterial_nou27")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Options" type="PanelContainer" parent="Menu"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_options_panel")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Options"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Options/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="OptionsLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 32
text = "OPTIONS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "Fullscreen"
script = ExtResource("5_abwkb")

[node name="FpsCounter" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "FPS counter"

[node name="Ping" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Shows connection trip time to host (in milliseconds)"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "View Ping"

[node name="HSeparator2" type="HSeparator" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SensitivityLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 24
text = "SENSITIVITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Mouse sensitivity"
vertical_alignment = 1

[node name="MouseSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.005
script = ExtResource("6_00vww")

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "Controller sensitivity"
vertical_alignment = 1

[node name="ControllerSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.009999999999999998
script = ExtResource("7_jhf7u")

[node name="HSeparator3" type="HSeparator" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_normal")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "BACK"
script = ExtResource("6_2hany")

[node name="PauseMenu" type="PanelContainer" parent="Menu"]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PauseLabel" type="Label" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"
script = ExtResource("7_5cdyw")

[node name="Options" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="ReturnToTitle" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Title Screen"

[node name="Quit" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("9_ucmny")

[node name="MainMenu" parent="Menu" instance=ExtResource("19_rlmenu")]

[node name="MusicDirectoryDialog" type="FileDialog" parent="Menu"]
title = "Open a Directory"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Select Folder"
file_mode = 2
access = 2
show_hidden_files = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b2qhxdrnviyqf")
spawn_path = NodePath("..")

[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/FpsCounter" to="FpsCounter" method="_on_fps_counter_toggled"]
[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/Ping" to="FpsCounter" method="_on_ping_toggled"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" method="_on_value_changed"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" method="_on_value_changed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" method="_on_back_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/ReturnToTitle" to="." method="_on_return_to_title_pressed"]
[connection signal="friends_pressed" from="Menu/MainMenu" to="." method="_on_friends_pressed"]
[connection signal="garage_pressed" from="Menu/MainMenu" to="." method="_on_garage_pressed"]
[connection signal="item_shop_pressed" from="Menu/MainMenu" to="." method="_on_item_shop_pressed"]
[connection signal="multiplayer_pressed" from="Menu/MainMenu" to="." method="_on_multiplayer_button_pressed"]
[connection signal="options_pressed" from="Menu/MainMenu" to="." method="_on_settings_pressed"]
[connection signal="practice_pressed" from="Menu/MainMenu" to="." method="_on_play_pressed"]
[connection signal="profile_pressed" from="Menu/MainMenu" to="." method="_on_profile_pressed"]
[connection signal="quit_pressed" from="Menu/MainMenu" to="." method="_on_quit_pressed"]
[connection signal="dir_selected" from="Menu/MusicDirectoryDialog" to="." method="_on_music_directory_selected"]
